# batch-process

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_FEATURES.md  Dockerfile.producer  Dockerfile.worker  README-celery.md  README.md  TUTORIALS.md  docker-compose-dev.yml  docker-compose.yml  main.py  main_logic.py  makefile  pyproject.toml  rabbitmq.conf  requirements.txt  results.db  worker.py  worker_updated.py
.github/workflows/: main.yml
config/: config.py  config.yaml  settings.py
data/: sample_data.json  sample_data.jsonl  test.parquet  train.parquet
db/: results.db
docker/: run-producer.sh  run-worker.sh
k8s/: values.yaml  values.yaml.backup
k8s/templates/: celery-beat-deployment.yaml  rabbitmq-deployment.yaml
models/: model.pkl
mychart/: Chart.yaml  Chart.yaml.save  values.yaml
mychart/templates/: api-deployment.yaml  celery-prediction-worker-deployment.yaml  celery-worker-deployment.yaml  flower-deployment.yaml  postgres-deployment.yaml
notebooks/: 00-lab.ipynb  model.pkl
rmq-app/: Chart.yaml  values.yaml
rmq-app/my_deployments/: producer-deployment.yaml  worker-deployment.yaml
rmq-app/templates/: configmap.yaml  producer-deployment.yaml  producer-job.yaml  rabbitmq-deployment.yaml  rabbitmq-pvc.yaml  rabbitmq-service.yaml  worker-deployment.yaml  worker-job.yaml
schemas/: __init__.py  db_models.py  input_schema.py  output_schema.py
src/: __init__.py  db_utils.py  rabbitmq.py  utils.py
src/api/: app.py  utilities.py
src/api/routes/: health.py  prediction.py
src/api/routes/v1/: __init__.py  health.py  prediction.py  status.py
src/celery/: __init__.py  app.py
src/celery/tasks/: __init__.py  data_processing.py  email_tasks.py  ml_prediction_tasks.py  periodic_tasks.py
src/celery_pkg/: __init__.py  app.py
src/celery_pkg/tasks/: __init__.py  data_processing.py  email_tasks.py  ml_prediction_tasks.py  notifications.py  periodic_tasks.py
src/config/: config.py  config.yaml  settings.py
src/database/: __init__.py  db_models.py  utilities.py
src/ml/: train.py  utils.py
src/rabbitmq/: __init__.py  producer.py  rabbitmq.py
src/schemas/: __init__.py  input_schema.py  output_schema.py
tests/: test_ml_prediction_tasks.py
