[project]
name = "batch-process"
version = "0.1.0"
description = "This is used to batch process data"
requires-python = "==3.12.*"
authors = [{ name = "Neidu", email = "your.email@example.com" }]
dependencies = [
    "aio-pika==9.5.5",
    "aiosqlite>=0.21.0",
    "anyio>=4.9.0",
    "mypy==1.15.0",
    "numpy==2.2.4",
    "omegaconf>=2.3.0",
    "pandas==2.2.3",
    "polars==1.26.0",
    "pyarrow==19.0.1",
    "pydantic-settings==2.8.1",
    "requests>=2.32.3",
    "ruff>=0.11.4",
    "scikit-learn==1.6.1",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "jupyter==1.1.1",
    "nb-black-formatter==1.0.1",
    "pre-commit>=4.2.0",
    "ruff==0.11.4",
]

[tool.mypy]
mypy_path = ["./"]
python_version = "3.12"
show_error_context = true
ignore_missing_imports = true
warn_incomplete_stub = false
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = false
warn_unused_configs = true
pretty = true

[[tool.mypy.overrides]]
module = ["numpy.typing"]
ignore_missing_imports = true

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
indent-width = 4
# Use the latest rules.
preview = true

# Assume Python 3.10
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".dockerignore",
    ".eggs",
    ".env",
    ".git",
    ".gitignore",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "env",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
select = [
    "I001",
    "ANN201",
    "ANN202",
    "S107",
    "PIE796",
    "T201",
    "PYI009",
    "PYI012",
    "PYI026",
    "RET505",
    "SIM115",
    "F401",
]
ignore = [
    "E741",
    "PT011",
    "PLR1722",
    "D419",
    "D101",
    "D100",
    "D107",
    "ANN401",
    "PLC0414",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"



[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
